--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Dependency for Google Sign-In
-    androidTestCompile ('com.android.support.test:runner:0.5', {
+    androidTestCompile('com.android.support.test:runner:0.5', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestCompile('com.android.support.test:rules:0.5', {
@@ -51,8 +51,15 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.6'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
