--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,15 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.microsoft.azure:azure-mobile-android:3.1.0@aar'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
