--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.android.gms:play-services-auth:10.2.6'
     compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
+    compile 'com.google.android.gms:play-services-auth:11.0.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.0'
+    compile 'com.google.android.gms:play-services-location:11.0.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
