--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
-
 
 android {
     compileSdkVersion 25
@@ -53,6 +51,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.0.0'
     compile 'com.google.android.gms:play-services-maps:11.0.0'
     compile 'com.google.android.gms:play-services-location:11.0.0'
+    compile 'com.google.android.gms:play-services-iid:11.0.0'
+    compile 'com.google.android.gms:play-services-gcm:11.0.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
@@ -60,8 +60,6 @@ dependencies {
     compile 'com.microsoft.azure:azure-mobile-android:3.1.0@aar'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
-    compile 'com.google.android.gms:play-services:9.0.0'
 
     compile 'com.android.support:support-annotations:25.3.1'
 }
