--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         android:name="com.github.hithibelagal.pn.permission.C2D_MESSAGE" />
     <receiver
         android:name="com.google.android.gms.gcm.GcmReceiver"
-        android:export="true"
+        android:exported="true"
         android:permission="com.google.android.c2dm.permission.SEND" >
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
