--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".MainActivity"
             android:label="@string/app_name"></activity>
         <activity
+            android:name=".ParkDetails"
+            android:label="@string/app_name"></activity>
+        <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="stateVisible|adjustPan">
