--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         <activity
             android:name=".RegisterActivity"
             android:label="ParkPal Sign Up"></activity>
+        <activity android:name=".AddParkReviewActivity"
+            android:label="ParkPal"> </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
